# rustedex-gen

./: .gitignore  Cargo.toml
src/: args.rs  export.rs  lib.rs  main.rs  progress_bar.rs  workers.rs
src/generators/: index.rs  mod.rs  pokemon.rs
static/: pokedex.css
templates/: base.html.tera  index.html.tera  pokemon.html.tera
