[package]
name = "rustedex-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["env", "derive"] }
dotenvy = "0.15.7"
flume = { version = "0.11.1", features = ["async"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
inquire = "0.7.5"
pin-project = "1.1.10"
rustemon = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.44.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
] }
warp = { version = "0.3.7", default-features = false }
